test/compile-fail/resolution/use/nested-private-mod/expected.txt
error: item `c` is private
  ┌─ ./test/compile-fail/resolution/use/nested-private-mod/top.rhdl:3:13
  │
3 │         mod c {}
  │             - declared here
  ·
7 │ use a::b::c;
  │           ^ item is private
  │
  = modify the visibility of `c` if you want to use it

